--- a/assets/css/productSearch.css
+++ b/assets/css/productSearch.css
@@ -26,8 +26,10 @@ header {
 }
 
 .logo img {
-    width: 50px;
-    margin-right: 15px;
+    height: 50px;
+    display: block;
+    width: 50px; /* Maintain aspect ratio */
+    border-radius: 50%;
 }
 
 .nav-links {
